unpackaged/main/default/objects/tspa__VRA_Report_Knowledge__c/tspa__VRA_Report_Knowledge__c.object-meta.xml
<CustomObject>
    <label>VRA - Report Knowledge</label>
    <nameField>
        <displayFormat>KMS-{0000}</displayFormat>
        <label>VRA - Report Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VRA - Report Knowledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>