unpackaged/main/default/objects/tspa__VRA_Report_Knowledge__c/fields/tspa__Article_Number__c.field-meta.xml
<CustomField>
    <fullName>tspa__Article_Number__c</fullName>
    <label>Article Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>