unpackaged/main/default/objects/tspa__VRA_Report_Knowledge__c/fields/tspa__Image_Count__c.field-meta.xml
<CustomField>
    <fullName>tspa__Image_Count__c</fullName>
    <label>Image Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>