unpackaged/main/default/objects/tspa__VRA_Report_Knowledge__c/fields/tspa__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Object_Id__c</fullName>
    <label>Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>