unpackaged/main/default/objects/tspa__VRA_Report_Knowledge__c/fields/tspa__Visual_Remote_Assistant_Reports__c.field-meta.xml
<CustomField>
    <fullName>tspa__Visual_Remote_Assistant_Reports__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visual Remote Assistant Reports</label>
    <referenceTo>tspa__Visual_History__c</referenceTo>
    <relationshipLabel>VRA - Report Knowledge</relationshipLabel>
    <relationshipName>VRA_Report_Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>